# ssaw

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: alias.rs  chain.rs  cli.rs  config.rs  forge.rs  lib.rs  main.rs  rpc.rs  server.rs  wallet.rs
tests/: anvil_flow.rs  cli_flow.rs
