[package]
name = "ssaw"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
anyhow = "1.0"
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
ethers-signers = "2.0"
home = "0.5"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zeroize = "1.8"
