[package]
name = "ssaw"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
anyhow = "1.0"
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
coins-bip32 = "0.8"
ethers-core = "2.0"
hex = "0.4"
home = "0.5"
k256 = "0.13"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
toml = "0.8"
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
zeroize = "1.8"
