[package]
name = "ssaw"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
alloy = "1.0"
alloy-contract = "1.8.3"
alloy-dyn-abi = { version = "1.5.7", features = ["eip712"] }
alloy-json-abi = "1.5.7"
alloy-signer = { version = "1.8.3", features = ["eip712"] }
alloy-signer-local = { version = "1.0", features = ["mnemonic", "eip712"] }
anyhow = "1.0"
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
home = "0.5"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
zeroize = "1.8"
